--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
 :root {
-  --negro: #2F2C23;
+  --black: #2F2C23;
   --red: #EF626B; 
-  --white: #fff6f5;
+  --white: #faeeed;
   --red-solf:#FFA1A1;
+
   /* Tipografía */
   --tipo-principal: 'Chivo Mono', monospace;
 }
@@ -18,6 +19,7 @@
 html {
   font-size: 62.5%;
   font-family: var(--tipo-principal);
+  color: var(--black);
   scroll-behavior: smooth;
 }
 
@@ -71,7 +73,7 @@ blockquote:before, blockquote:after, q:before, q:after {
 }
 
 .header-section h3 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: 300;
 }
 
@@ -97,9 +99,14 @@ blockquote:before, blockquote:after, q:before, q:after {
   font-family: var(--tipo-principal);
   font-size: 1.4rem;
   font-weight: 700;
+  color: var(--black);
+  background-color: var(--red-solf);
+  margin-right: 22px;
+}
+
+.contact:hover {
   color: var(--white);
   background-color: var(--red);
-  margin-right: 22px;
 }
 
 .download {
@@ -109,13 +116,52 @@ blockquote:before, blockquote:after, q:before, q:after {
   font-family: var(--tipo-principal);
   font-size: 1.4rem;
   font-weight: 700;
-  color: var(--negro);
+  color: var(--black);
   outline: 3px solid var(--red-solf)  ;
   outline-offset: -3px;
   background-color: var(--white);
-  
 }
+
+.download:hover {
+  outline: 3px solid var(--red)
+}
+
 
 .button-shadow {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+/* __________________________________________ */
+
+
+.aboutMe {
+  padding: 85px 60px 85px;
+}
+
+.aboutMe h1{
+  font-size: 4.8rem;
+  padding-bottom: 26px;
+}
+
+.aboutMe p {
+  font-size: 1.6rem;
+  padding-bottom: 26px;
+}
+
+.skils-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  padding-top: 20px;
+
+}
+
+.projects {
+  width: 100%;
+  background-color: var(--white);
+}
+
+.form-section {
+
 }
