--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   --black: #2F2C23;
   --red: #EF626B; 
   --white: #faeeed;
+  --white-dark: #ffa1a136;
   --red-solf:#FFA1A1;
 
   /* Tipografía */
@@ -128,7 +129,7 @@ blockquote:before, blockquote:after, q:before, q:after {
 
 
 .button-shadow {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 /* __________________________________________ */
@@ -149,19 +150,93 @@ blockquote:before, blockquote:after, q:before, q:after {
 }
 
 .skils-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  justify-content: space-evenly;
   gap: 20px;
   padding-top: 20px;
+}
 
+.skill-tags {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+  font-size: 1.2rem;
+}
+
+.skill-tags svg {
+  width: 30px;
+  height: 30px;
 }
 
 .projects {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 85px 60px 85px ;
+  gap: 45px;
   background-color: var(--white);
 }
 
-.form-section {
-
+.projects h1 {
+  width: 100%;
+  text-align: start;
+  font-size: 4.8rem;
 }
+
+.card-projects {
+  padding: 22px 26px;
+  background-color: var(--white-dark);
+  border-radius: 12px;
+  box-shadow: rgba(88, 61, 61, 0.25) 0px 2px 5px -1px, rgba(87, 51, 51, 0.3) 0px 1px 3px -1px;
+}
+
+.card-texts h2{
+  padding: 6px 0;
+  padding-bottom: 15px;
+  font-size: 2rem;
+  color:var(--red);
+}
+
+.card-texts p {
+  padding-bottom: 20px;
+  font-size: 1.4rem;
+}
+
+.tags {
+  display: flex;
+  gap: 12px;
+  padding-bottom: 20px;
+}
+
+.tags span{
+  padding: 3px 8px;
+  font-size: 1.2rem;
+  border-radius: 8px;
+  background-color: var(--white);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.card-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.button-card {
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  font-size: 1.4rem;
+  gap: 5px;
+  border-radius: 8px;
+  border: 2px solid var(--red);
+}
+
+.button-card:hover{
+  color: var(--red);
+}
+
+/* .form-section {
+
+} */
