--- a/src/style.css
+++ b/src/style.css
@@ -284,10 +284,15 @@ footer h3 {
 
 /* _______Responsive ________ */
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
 
   .header-section, .aboutMe, .projects-conteiner, footer {
     padding-left: 200px;
     padding-right: 200px;
   }
+
+  .header-btns {
+    flex-direction: row;
+  }
 }
+
